<resources>
    <string name="app_name">Gentse Feesten</string>
    <string name="menu_bar_title"># GF14</string>
    <string name="menu_bar_go_to_menu">Menu</string>
    <string name="menu_bar_go_to_favorites">My favorites</string>
    <string name="no_events_found_on_home">No events found. Go to settings to change your preferences or update the program. \n\nClick here to go to settings.</string>
    <string name="no_events_after_end_date">It\'s over, see you next year!</string>
    <string name="menu_switch">Change</string>
    <string name="upcoming">Upcoming events</string>
    <string name="my_favorites">My favorites</string>
    <string name="no_favorites">You have no favorites yet. On the detail of any event you can click on the star button to add them to this list.</string>
    <string name="menu_home">Home </string>
    <string name="menu_favorites">My favorites</string>
    <string name="menu_program">Program</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_free">Free</string>
    <string name="menu_festival">Festivals</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_parking">Parking</string>
    <string name="menu_parking_offline">To view the parking information you need to be connected to 3G or WiFi.</string>
    <string name="menu_bicycle">Bike stables</string>
    <string name="menu_gent_info">Gent information</string>
    <string name="menu_atm">ATMs</string>
    <string name="menu_search">Search</string>
    <string name="menu_practical">Practical</string>
    <string name="menu_toilet">Public toilets</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About this application</string>
    <string name="menu_around_me">Nearby</string>
    <string name="menu_language">Language</string>
    <string name="menu_around_me_not_connected">To find out what is in your neighborhood you need to be connected to 3G or WiFi.</string>
    <string name="no_events_around_me">No activities found nearby.\n\nThere are three possible reasons why no events are found: \n\n1. You\'re not in Ghent and we only look within a radius of 5 kilometers.\n\ n2. We were not able yet to pinpoint your exact location. \n\ n3. This feature only starts working well when the festivities have started.</string>
    <string name="around_me_refresh">Screen is reloaded</string>
    <string name="change_sort">Sort by</string>
    <string name="sort_by_hour">Time</string>
    <string name="sort_by_distance">Distance</string>
    <string name="around_me_search">Searching for events in your neighborhood, please wait. \n\n We search in a 5-kilometer radius around you. You\'ll be able to sort by distance or time.\n\n</string>
    <string name="bicycle_info"><![CDATA[<em>Bewaakte fietsparkings</em><br /><br />Om uw fiets helemaal veilig achter te laten, kunt u één van de twee gratis bewaakte fietsenparkings aan de Baudelokaai of Korenmarkt gebruiken. Die zijn 24/24 uur open. Baudelokaai is bewaakt van 14 uur ’s middags tot 6 uur ’s morgens, onder de Sint-Michielsbrug is er 24/24u bewaking.<br />Op deze twee plaatsen kan u een voetluchtpomp ontlenen bij de bewakers voor het oppompen van platte banden. Opgelet: de fietsparking E. Braunplein zal gesloten zijn.<br /><br /><em>Onbewaakte fietsstallingen</em><br /><br />Extra stallingen vindt u op de volgende locaties: Sint-Jacobsnieuwstraat,, Hoogpoort, Limburgstraat, Maaseikstraat, Sint-Niklaasstraat, Steendam, Kouter, Vlaanderenstraat, Baudelokaai, Justitiepaleis (parking Koophandelsplein), Sint-Baafssite, Drabstraat, Rode Torenkaai, Laurentbrug, Sint-Jorisbrug en Minnemeersbrug<br /><br />Verder kunt u ook fietsen huren bij Max Mobiel.<br /><br />Info: MAX MOBIEL - 09 242 80 46 -&nbsp;<a href="mailto:max-mobiel@gent.be">max-mobiel@gent.be</a> - <a href="http://www.max-mobiel.be">www.max-mobiel.be</a><br /><br />]]></string>
    <string name="gent_info"><![CDATA[<em>09 210 10 10</em><br /><br />Open every day from 8 until 19 uur for all questions and reports.<br />]]></string>
    <string name="search_hint">Search event</string>
    <string name="search_results">Results</string>
    <string name="change_day">Change day</string>
    <string name="change_category">Change category</string>
    <string name="change_location">Change location</string>
    <string name="change_type">Change type</string>
    <string name="no_search_results">No results found, click here to start a new search.</string>
    <string name="no_search_results_facet">No results found, you can click above to change the date or type.</string>
    <string name="select_a_day">Select a day</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_a_location">Select a location</string>
    <string name="select_a_festival">Select a festival</string>
    <string name="date_period">Date</string>
    <string name="category">Category</string>
    <string name="event_price">Price</string>
    <string name="event_free">Free</string>
    <string name="event_festival">Festivals</string>
    <string name="event_whole_day">All day</string>
    <string name="event_pre_sale">Pre-sale</string>
    <string name="view_on_map">View on map</string>
    <string name="add_or_remove_from_favorite">Add or remove from favorites</string>
    <string name="info_online">More info online</string>
    <string name="info_map">View on map</string>
    <string name="info_directions">Itinerary</string>
    <string name="back_to_event">Back to event</string>
    <string name="about_title">About this application</string>
    <string name="about_info"><![CDATA[Open source mobile application for the Ghent Festivities 2014. We are not responsible for the accuracy of the information provided. Data available at &lt;a href=\"http://data.gent.be/\"&gt; http://data.gent.be/ &lt;/ a&gt; &lt;br /&gt; &lt;br /&gt; &lt;b&gt; Credits &lt;/ b&gt; &lt;br /&gt; &lt;br /&gt; &lt;a href=\"https://twitter.com/TimLeytens\"&gt; @ TimLeytens &lt;/ a&gt; - iOS &amp; Drupal developer &lt;br /&gt; &lt;a href = \"https://twitter. com / swentel \"&gt; @ swentel &lt;/ a&gt; - Android &amp; Drupal developer &lt;br /&gt; &lt;a href=\"https://twitter.com/leenvs\"&gt; @ LeenVS &lt;/ a&gt; - Graphic designer &lt;br /&gt; &lt; br /&gt; &lt;b&gt; Source &lt;/ b&gt; &lt;br /&gt; &lt;br /&gt; iOS &lt;a href=\"http://github.com/TimLeytens/GF13\"&gt; GitHub &lt;/ a&gt; &lt;br /&gt; Android: &lt;a href=\"https://github.com/swentel/gentsefeesten\"&gt; GitHub &lt;/ a&gt;]]></string>
    <string name="program_category">Program</string>
    <string name="program_title">Update program</string>
    <string name="homepage_category">Events on homescreen</string>
    <string name="setting_front_limit">Amount</string>
    <string name="setting_front_limit_info">Select the number in the list that is displayed on the home screen</string>
    <string name="setting_category_title">Filter by category</string>
    <string name="setting_location_title">Filter by location</string>
    <string name="setting_category_info">Select category</string>
    <string name="setting_location_info">Select location</string>
    <string name="share_category">Share</string>
    <string name="share_message_title">Social media</string>
    <string name="share_message_info">Default message for social media. "!replace" will be replaced by the title of the event.</string>
    <string name="share_default">At the Gentse Feesten. Checking out !replace. Way cool! #GF14</string>
    <string name="setting_front_ongoing">Already started</string>
    <string name="setting_front_ongoing_info">Also show events that have just started</string>
    <string name="ga_category">Google Analytics</string>
    <string name="setting_ga_title">Statistics</string>
    <string name="setting_ga_summary">Check to send data to Google.</string>
    <string name="language_category">Language</string>
    <string name="setting_language_gensch">Set language to Gentsch</string>
    <string name="setting_language_gensch_summary">The app interface will be displayed in the Ghent dialect.</string>
    <string name="notification_category">Notifications</string>
    <string name="setting_notification">Turn on notifications</string>
    <string name="setting_notification_summary">Each event in your favorites will trigger a notification</string>
    <string name="setting_notification_buzz">Vibrate on notification</string>
    <string name="setting_notification_time">How many minutes in advance do you want a notification ?</string>
    <string name="updating">Update program</string>
    <string name="updating_message">Downloading over 4000 events. This takes about 1 minute, please wait. \n\nIf you have less events, or nothing at all, go back to settings and try again. \n\nThe home screen will be loaded when done.</string>
    <string name="update_offline">You must be connected to 3G or WiFi to retrieve the program.\n\nTry again when you are connected to the internet.</string>
    <string name="updating_info">Click here to get the latest version. Number of events: </string>
    <string name="service_offline">Our program service is currently offline, please try again later.</string>
    <string name="updating_done">The program has been updated.</string>
    <string name="back_to_atm_list">List</string>
    <string name="no_atms">No machines found</string>
    <string name="atm_map">Map</string>
    <string name="close_bubble">Close</string>
    <string name="atm_offline">You must be connected to 3G or Wi-Fi to view the map</string>
    <string name="july_10">Thursday, July 10</string>
    <string name="july_11">Friday, July 11</string>
    <string name="july_12">Saturday, July 12</string>
    <string name="july_13">Sunday, July 13</string>
    <string name="july_14">Monday, July 14</string>
    <string name="july_15">Tuesday, July 15</string>
    <string name="july_16">Wednesday, July 16</string>
    <string name="july_17">Thursday, July 17</string>
    <string name="july_18">Friday, July 18</string>
    <string name="july_19">Saturday, July 19</string>
    <string name="july_20">Sunday, July 20</string>
    <string name="july_21">Monday, July 21</string>
    <string name="july_22">Tuesday, July 22</string>
    <string name="july_23">Wednesday, July 23</string>
    <string name="july_24">Thursday, July 24</string>
    <string name="july_25">Friday, July 25</string>
    <string name="july_26">Saturday, July 26</string>
    <string name="july_27">Sunday, July 27</string>
    <string name="bals_dans">Bals / Dance</string>
    <string name="circus">Circus</string>
    <string name="comedy">Comedy</string>
    <string name="concerts_divers">Concerts diverse</string>
    <string name="concerts_jazz">Jazz</string>
    <string name="concerts_classic">Concerts</string>
    <string name="concerts_rock_pop">Rock, pop, techno, blues, folk</string>
    <string name="children">Children</string>
    <string name="market">Market</string>
    <string name="sports">Sports and recreation</string>
    <string name="exhibition">Exhibitions</string>
    <string name="theatre">Theater</string>
    <string name="varia">Miscellaneous</string>
    <string name="poetry">Poetry</string>
    <string name="fireworks">Firework</string>
    <string name="walks">Walks</string>
    <string name="baudeloo">Baudelohof</string>
    <string name="beverhout">Beverhoutplein</string>
    <string name="sint_jacobs">Sint-Jacobs</string>
    <string name="bisdomplein">Bisdomplein</string>
    <string name="emile_braunplein">Emile Braunplein</string>
    <string name="francois_laurent">Francois Laurentplein</string>
    <string name="gravensteen">Gravensteen</string>
    <string name="groentemarkt">Groentemarkt</string>
    <string name="maria_hendrik">Koningin Maria Hendrikaplein</string>
    <string name="korenlei">Korenlei - Graslei</string>
    <string name="korenmarkt">Korenmarkt</string>
</resources>