<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:weightSum="1.0"
    android:orientation="horizontal"
    android:background="@color/menu_bar_background">

    <ImageButton
        android:id="@+id/menu_bar_go_to_menu"
        android:layout_width="0dp"
        android:layout_weight=".15"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingTop="@dimen/menu_bar_top_padding"
        android:paddingLeft="@dimen/menu_bar_left_padding"
        android:layout_gravity="center"
        android:contentDescription="@string/menu_bar_go_to_menu"
        android:src="@drawable/menu_button_states"
        android:scaleType="centerInside"/>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_weight=".70"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/menu_bar_text_color"
        android:textSize="@dimen/menu_bar_title_size"
        android:text="@string/menu_bar_title"/>

    <ImageButton
        android:id="@+id/menu_bar_go_to_favorites"
        android:layout_width="0dp"
        android:layout_weight=".15"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:contentDescription="@string/menu_bar_go_to_favorites"
        android:src="@drawable/menu_favorites_button_states"
        android:adjustViewBounds="false"
        android:scaleType="centerInside"/>

</LinearLayout>