<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/global_background">

    <include layout="@layout/header" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stunt"
        android:id="@+id/imageView"/>


    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/big_title_background"
        android:gravity="center"
        android:text="@string/menu_around_me"
        android:textColor="@color/global_textcolor"
        android:textSize="20sp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:background="#ffffff">

        <TextView
            android:id="@+id/searching_around"
            android:text="@string/around_me_search"
            android:background="#ffffff"
            android:textColor="@color/global_textcolor"
            android:textSize="15sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</LinearLayout>