<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/global_background">

    <include layout="@layout/header" />

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:id="@+id/sort_change"
            android:background="@color/global_background"
            android:layout_marginTop="10dp">

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/big_title_background"
            android:gravity="center"
            android:text="@string/menu_around_me"
            android:textColor="@color/global_textcolor"
            android:textSize="20sp"
            android:layout_marginBottom="1dp"/>

        <ImageButton
            android:contentDescription="@string/menu_switch"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:src="@drawable/list"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/sort_change_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:gravity="center"
        android:background="@color/list_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:background="@color/main_text_background"
        android:textColor="@color/global_textcolor"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:id="@+id/empty"
        android:textSize="15sp"
        android:text="@string/no_events_around_me"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
</TextView>

</LinearLayout>