<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#004252"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:weightSum="1.0"
        android:orientation="horizontal">

        <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/search"
                android:hint="@string/search_hint"
                android:inputType="text" />

        <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cee3ab"
                android:padding="10dp"
                android:text="@string/search_go" />
    </LinearLayout>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="#004252"
        android:layout_height="fill_parent">


        <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="#005768"
                android:visibility="visible"
                />

        <TableRow
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:id="@+id/menu_home">

            <ImageView
                android:src="@drawable/menu_home"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:textColor="#73b5c1"
                android:text="@string/menu_home"
                android:gravity="bottom"
                android:layout_gravity="bottom"/>

        </TableRow>

        <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="#005768"
                android:visibility="visible"
                />

        <TableRow
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                android:id="@+id/menu_favorites">

            <ImageView
                android:src="@drawable/menu_favorites"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#73b5c1"
                android:text="@string/menu_favorites"
                android:layout_gravity="bottom"
                    />

        </TableRow>

        <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="#005768"
                android:visibility="visible"
                />

        <TableRow
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                >

            <ImageView
                android:src="@drawable/menu_program"
                />

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#73b5c1"
                    android:text="@string/menu_program"
                    android:gravity="center_vertical"
                    android:layout_gravity="bottom"/>

        </TableRow>

        <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="#005768"
                android:visibility="visible"
                />

        <TableRow
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="#003a48"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                android:id="@+id/theme">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="#73b5c1"
                    android:text="@string/theme"
                    android:gravity="center_vertical"
                    android:layout_gravity="bottom"/>

        </TableRow>

        <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="#005768"
                android:visibility="visible"
                />

        <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="#005768"
                android:visibility="visible"
                />

        <TableRow
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                android:id="@+id/menu_settings">

            <ImageView
                    android:src="@drawable/menu_settings"
                    />

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#73b5c1"
                    android:text="@string/menu_settings"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"/>
        </TableRow>

        <TableRow
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="10dp"
                android:paddingBottom="3dp"
                android:id="@+id/menu_about">

            <ImageView
                    android:src="@drawable/menu_about"
                    />

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#73b5c1"
                    android:text="@string/menu_about"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"/>
        </TableRow>
    </TableLayout>
</LinearLayout>